# Mdk

./: .clang-format  .clangd  CMakeLists.txt  build.sh
mdk/: CMakeLists.txt
mdk/src/app/: app.cpp  app.h
mdk/src/utils/: arg_parser.cpp  arg_parser.h  logger.cpp  logger.h
src/: main.cpp
